# RustPass

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: encrypt_decrypt.rs  main.rs  sleddb.rs
