[package]
name = "RustPass"
version = "0.1.0"
edition = "2024"
description = "A terminal-based password manager built in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YOUR_USERNAME/RustPass"

[[bin]]
name = "rustpass"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
anyhow = "1.0"
aes-gcm = "0.10.3"
rand = "0.9.1"
argon2 = "0.5.3"
base64 = "0.22.1"
hex = "0.4.3"
sled = "0.34.7"
once_cell = "1.21.3"
